2006-05-15  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-satisfydepends: add support for new dpkg-dev construct
	for linux-any etc. patch by Peter Eisentraut.

	* THANKS: update thanks text for a change.

	* pbuilderrc.5: undocument the restriction that --buildresult
	option needs to be specified for pdebuild, and BUILDRESULT cannot
	be used.

	I should probably warn that the directory should be absolute.

	* pdebuild.1: fix man a bit to make --buildresult option doc
	unambiguous.

	* pbuilder-modules: fix pdebuild command options.

2006-04-22  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: update docs on user-mode-linux usage.
	add reference to PDF version.

	* pdebuild: give --uid/--gid options to pdebuild-internal

2006-04-01  Junichi Uekawa  <dancer@debian.org>

	* pdebuild: directory is moved after command-line is parsed.
	This should fix a few weird behaviors wrt relative directories, and 
	allow --help to work if there is no debian/ directory

2006-03-31  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-satisfydepends: spelling mistake, thanks pryzbyj for
	telling me. daner->dancer

2006-03-22  Junichi Uekawa  <dancer@debian.org>

	* pbuilderrc.5: spelling fix: s/extention/extension/

	* pbuilderrc:

	* pbuilder.8: 

2006-03-18  Junichi Uekawa  <dancer@debian.org>

	* testsuite/regression/287477-pkgname-logfile.sh: create regression

	* pbuilder.8: update documentation of --pkgname-logfile

	* pbuilder-buildpackage: allow chown, and add support for PKGNAME_LOGFILE_EXTENTION.
	
	* pbuilderrc (PKGNAME_LOGFILE_EXTENTION): add

	* pbuilderrc.5: document

2006-03-17  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-buildpackage (BUILDRESULTGID): chown/chgrp buildresult logfiles

2006-03-08  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: apply necessary formatting edition.

	* Documentation/Makefile (%.pdf): create PDF documentation out of pbuilder-doc.
