@@ -3,6 +3,7 @@ pbuilder (0.153) UNRELEASED; urgency=low
   * fix pdebuild --help output (closes: #367133)
   * Support for new style architecture specifications (closes: #363193)
     Thanks to Peter Eisentraut for patch.
+  * update documentation to add a snippet.
   
  -- Junichi Uekawa <dancer@debian.org>  Mon, 15 May 2006 03:10:06 +0900
 
