@@ -1,5 +1,8 @@
 2006-05-15  Junichi Uekawa  <dancer@debian.org>
 
+	* Documentation/pbuilder-doc.xml: document method for adding local
+	repository.
+
 	* pbuilder-satisfydepends: add support for new dpkg-dev construct
 	for linux-any etc. patch by Peter Eisentraut.
 
